NetBSD Problem Report #49201

From ryo_on@yk.rim.or.jp  Sat Sep 13 04:04:36 2014
Return-Path: <ryo_on@yk.rim.or.jp>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 98CADCBD6F
	for <gnats-bugs@gnats.NetBSD.org>; Sat, 13 Sep 2014 04:04:36 +0000 (UTC)
Message-Id: <20140913040432.72E9A2000005C@mail.SiriusCloud.jp>
Date: Sat, 13 Sep 2014 13:04:32 +0900 (JST)
From: ryoon@NetBSD.org
Reply-To: ryoon@NetBSD.org
To: gnats-bugs@gnats.NetBSD.org
Subject: broken build with options USB_DEBUG (latest current)
X-Send-Pr-Version: 3.95

>Number:         49201
>Category:       kern
>Synopsis:       broken build with options USB_DEBUG (latest current)
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    skrll
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat Sep 13 04:05:00 +0000 2014
>Closed-Date:    Sun Sep 14 06:41:26 +0000 2014
>Last-Modified:  Sun Sep 14 06:41:26 +0000 2014
>Originator:     Ryo ONODERA
>Release:        NetBSD 6.99.49
>Organization:

>Environment:


System: NetBSD temp.elements.tetera.org 6.99.49 NetBSD 6.99.49 (NOI915DRM) #0: Wed Aug 6 04:09:12 JST 2014 ryo_on@bismuth.elements.tetera.org:/usr/obj/amd64/sys/arch/amd64/compile/NOI915DRM amd64
Architecture: x86_64
Machine: amd64
>Description:
If you have "options USB_DEBUG" in your kernel config.
build.sh kernel will not performed successfully as following.

--- ehci.o ---
In file included from /usr/src/sys/dev/usb/ehci.c:81:0:
/usr/src/sys/dev/usb/ehci.c: In function 'ehci_init':
/usr/src/sys/dev/usb/ehci.c:362:33: error: 'ehcidebug' undeclared (first use in this function)
  USBHIST_FUNC(); USBHIST_CALLED(ehcidebug);
                                 ^
/usr/src/sys/dev/usb/usbhist.h:62:7: note: in definition of macro 'USBHIST_CALLED'
  if ((NAME) != 0) {     \
       ^
/usr/src/sys/dev/usb/ehci.c:362:33: note: each undeclared identifier is reported only once for each function it appears in
  USBHIST_FUNC(); USBHIST_CALLED(ehcidebug);
                                 ^
/

>How-To-Repeat:

>Fix:

I have no idea.

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: kern-bug-people->skrll
Responsible-Changed-By: skrll@NetBSD.org
Responsible-Changed-When: Sat, 13 Sep 2014 05:57:14 +0000
Responsible-Changed-Why:
Take


From: "Nick Hudson" <skrll@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/49201 CVS commit: src/sys/dev/usb
Date: Sat, 13 Sep 2014 08:15:43 +0000

 Module Name:	src
 Committed By:	skrll
 Date:		Sat Sep 13 08:15:43 UTC 2014

 Modified Files:
 	src/sys/dev/usb: ehci.c

 Log Message:
 Fix build when USB_DEBUG is defined and EHCI_DEBUG isn't. The converse is
 always true.

 PR/49201 (broken build with options USB_DEBUG (latest current))


 To generate a diff of this commit:
 cvs rdiff -u -r1.229 -r1.230 src/sys/dev/usb/ehci.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Sun, 14 Sep 2014 06:41:26 +0000
State-Changed-Why:
fixed


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.