Fix build when USB_DEBUG is defined and EHCI_DEBUG isn't. The converse is always true.

PR/49201 (broken build with options USB_DEBUG (latest current))